--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,63 @@ nav a:hover {
     margin-left: 30px;
 }
 
-h1 {
+h1, p {
     margin-left: 50px
 }
 
-p {
-    margin-left: 50px
+h1 {
+    font-size: 22px;
+    padding-top: 60px;
 }
+
+p {
+    font-size: 16px;
+}
+.search-form {
+    display: flex;
+    flex-direction: row;
+    margin-left: 50px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+  }
+  
+  .search-box {
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  }
+  
+  .search-icon {
+    width: 14px;
+    height: 18px;
+    background-color: #F2F2F2;
+    padding: 16px 20px;
+    border: 1px solid #F2F2F2;
+    border-radius: 15px 0px 0px 15px;
+  }
+  
+  input[type="text"] {
+    flex: 1;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    
+  }
+  
+  .search-btn {
+    padding: 15px 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 0px 15px 15px 0px;
+    font-size: 18px;
+
+   
+  }
+  
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
