--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,7 @@ p {
     display: flex;
     flex-direction: row;
     margin-left: 50px;
-    margin-top: 35px;
-    margin-bottom: 20px;
+    padding-top: 35px;
   }
   
   .search-box {
@@ -210,6 +209,32 @@ p {
 
    
   }
+
+.filtres {
+    margin-top: 50px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    margin-left: 50px;
+}
+    .filtre1 {
+        border-radius: 25px;
+        border: 2px solid #D9D9D9;
+        background-color: white;
+        width: 173px;
+        height: 50px;
+        font-weight: bold;
+        font-size: 17px;
+        padding: 4px 19px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .filtre1:hover {
+        background-color: #DEEBFF;
+    }
+
+
   
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
