--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,43 @@ p {
     margin-left: 50px;
     margin-top: 45px;
 }
+
+.activités-txt {
+    padding-left: 30px;
+    padding-top: 65px;
+    padding-bottom: 30px;
+}
+
+.activités-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 297.5px;
+    height: 439px;
+    border-radius: 20px;
+  } 
+  .container {
+    padding-left: 15px;
+    padding-bottom: 20px;
+    
+    
+  }
+
+  .activités-img {
+    width: 297.5px;
+    height: 380px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+  }
+
+.activités {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+}
+
+
+
   
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
