--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ body {
     line-height: 19px;
   }
   .element1 {   
+
   }
   .element2 {
     margin-left: 69px;
@@ -295,6 +296,28 @@ h1 {
     justify-content: center;
 }
 
+footer {
+    display: flex;
+    justify-content: flex-start;
+    background-color: #F2F2F2;
+    margin-top: 50px;
+    padding-left: 20px;
+}
+
+.column {
+    text-align: left;
+    width: 446.67px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
 
 
   
