--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,19 @@ body {
     color: var(--main-bg-color)
 }
 
+.logobooki {
+    width:61px; 
+    height:19px; 
+}
+
+.txtt {
+    margin-left: 50px;
+}
+
+.txttt {
+    font-weight: bold;
+    font-size: 18px;
+}
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
@@ -68,32 +81,38 @@ body {
 
 /****** Hebergements ***********/
 .hebergements {
-    width: 65%;
+    width: 871px;
     margin-top: 35px;
+    height: 680.5px;
+}
+
+.hebergements-cards .card {
+    display: inline-block;
+    margin: 3px;
+    margin-top: 33px;
+    width: 250.33px;
+    height: 237.25px;
+    flex-direction: column;
+    
 }
 
 .hebergements img {
+    box-sizing: border-box;
     width: 250.33px;
     height: 124px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    object-fit: cover;
 }
 
-.card-hebergements {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    margin-top: 30px;
-    width: 250.33px;
-    height: 207.25px;
+.bottom-txt {
+    align-items: center;
 }
-
-
-
 
 /****** Populaires ***********/
 .populaires {
     width: 32%;
+    margin-top: 35px;
 }
 
 .populaires-title {
@@ -136,6 +155,7 @@ body {
     margin-bottom: 5px;
 }
 
+/****** Menu ***********/
 .menu-container {
     display: flex;
     justify-content: flex-end;
@@ -162,6 +182,7 @@ nav a:hover {
     padding-top: 20px;
 }
 
+
 .activités {
     color:black
 }
@@ -170,23 +191,15 @@ nav a:hover {
     color: #0065fc
 }
 
-.logobooki {
-    margin-top: 4.53px;
-    margin-left: 30px;
-}
 
-h1, p {
-    margin-left: 50px
-}
 
 h1 {
+    margin-left: 50px;
     font-size: 22px;
     padding-top: 60px;
 }
 
-.hebergement-prix {
-    font-size: 14px;
-}
+/****** Formulaire ***********/
 .search-form {
     display: flex;
     flex-direction: row;
@@ -230,6 +243,7 @@ h1 {
 
    
   }
+/****** Filtres ***********/
 
 .filtres {
     margin-top: 50px;
@@ -255,6 +269,7 @@ h1 {
         background-color: #DEEBFF;
     }
 
+/****** Infobar ***********/
 .infobar {
     display: flex;
     align-items: center;
@@ -262,6 +277,12 @@ h1 {
     margin-top: 45px;
 }
 
+.infobar-txt {
+    margin-left: 10px;
+ 
+}
+
+/****** Activités ***********/
 .activités-txt {
     padding-left: 30px;
     padding-top: 65px;
@@ -296,6 +317,7 @@ h1 {
     justify-content: center;
 }
 
+/****** Footer ***********/
 footer {
     display: flex;
     justify-content: flex-start;
