--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 body {
     display: flex;
     justify-content: center;
+    
 }
 
 .main-container {
@@ -185,11 +186,11 @@ nav a:hover {
 }
 
 
-.activités {
+.activites {
     color:black
 }
 
-.hébergement {
+.hebergement {
     color: #0065fc
 }
 
@@ -270,6 +271,7 @@ h1 {
     .filtre1:hover {
         background-color: #DEEBFF;
     }
+
 
 /****** Infobar ***********/
 .infobar {
