--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 
 .card-title {
     font-size: 16px;
+    color: black;
 }
 
 .euro {
@@ -154,6 +155,13 @@ body {
     margin: 0;
 }
 
+.card-subtitle {
+    color:black
+}
+
+.no-underline {
+    text-decoration: none;
+  }
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
@@ -176,26 +184,25 @@ body {
     margin-left: 69px;
     }
 
-nav a { 
-    text-decoration: none;
-}
-
 nav a:hover {
     border-top: 2px solid blue;
     padding-top: 20px;
 }
 
-
-.activites {
+a {
+    text-decoration: none;
+}
+.activites-color {
     color:black
 }
 
-.hebergement {
+.hebergement-color {
     color: #0065fc
 }
 
-
-
+h4{
+    color:black
+}
 h1 {
     margin-left: 50px;
     font-size: 22px;
