--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@
 body {
     display: flex;
     justify-content: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    min-width: 320px;
     
 }
 
@@ -56,8 +59,8 @@ body {
 }
 
 .logobooki {
-    width:61px; 
-    height:19px; 
+    max-width:61px; 
+    max-height:19px; 
 }
 
 .txtt {
@@ -72,7 +75,7 @@ body {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
-    gap:39px;
+    gap: 2.9%;
 }
 
 .hebergements-and-populaires section {
@@ -84,9 +87,9 @@ body {
 
 /****** Hebergements ***********/
 .hebergements {
-    width: 871px;
+    max-width: 871px;
     margin-top: 35px;
-    height: 680.5px;
+    max-height: 680.5px;
     margin-left: 50px;
 }
 
@@ -94,8 +97,8 @@ body {
     display: inline-block;
     margin: 3px;
     margin-top: 33px;
-    width: 240.33px;
-    height: 237.25px;
+    max-width: 240.33px;
+    max-height: 237.25px;
     flex-direction: column;
     
 }
@@ -115,7 +118,7 @@ body {
 
 /****** Populaires ***********/
 .populaires {
-    width: 429px;
+    max-width: 429px;
     margin-top: 35px;
 }
 
@@ -186,7 +189,7 @@ body {
 
 nav a:hover {
     border-top: 2px solid blue;
-    padding-top: 20px;
+    padding-top: 13px;
 }
 
 a {
@@ -303,8 +306,8 @@ h1 {
 .activités-card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 297.5px;
-    height: 439px;
+    max-width: 297.5px;
+    max-height: 439px;
     border-radius: 20px;
   } 
   .container {
@@ -337,7 +340,7 @@ footer {
     margin-top: 50px;
     padding-left: 20px;
     margin-left: 50px;
-    width: 1300px;
+    max-width: 1300px;
 }
 
 .column {
@@ -365,25 +368,29 @@ li {
 @media (max-width: 1024px) {
     .hebergements-and-populaires {
         flex-direction: column;
+        margin-left: -50px;
     }
 
     .hebergements {
         width: 100%;
+        
     }
 
     .populaires {
         width: 100%;
         margin-top: 50px;
+        margin-left: 50px;
     }
 
     .populaires-cards {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
 
     .populaires-cards .card {
-        width: 30%;
+        width: 80%;
     }
 
     .populaires-cards .card-title {
@@ -393,9 +400,21 @@ li {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    .populaires-cards img {
+        width: 91px;
+        height: 146;
+    }
+    .tablette-topmain {
+        margin-left: -50px;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
+    nav a:hover {
+        border-bottom: 2px solid blue;
+        padding-bottom: 13px;
+    }
 }
