--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,8 @@ h1 {
     border: 1px solid #D9D9D9;
     border-radius: 50%;
     box-sizing: border-box;
-    width: 30px; /* ajustez la taille en fonction de vos besoins */
-    height: 30px; /* ajustez la taille en fonction de vos besoins */
+    width: 30px; 
+    height: 30px; 
     margin: 0;
     padding: 0;
     text-align: center;
@@ -584,5 +584,15 @@ object-fit: cover;
 .populaires-cards img {
     width: 91px;
     height: 146px;
+}
+
+.info-logo {
+    border: 1px solid #D9D9D9;
+    border-radius: 50%;
+    box-sizing: border-box;
+    width: 50px; 
+    height: 40px; 
+    text-align: center;
+    line-height: 40px;
 }
 }
